# bitshift

./: chat.html  package-lock.json  package.json  raw-resource-file.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  chat.tsx  chatWindow.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/assets/data/: keybindings.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_service.rs  chat.rs  commands.rs  config.rs  db.rs  file_ops.rs  lib.rs  llm.rs  main.rs  models.rs  scraper.rs  setup.rs  terminal.rs
src/commands/: contextKeys.ts  keybindingService.ts  registry.ts
src/components/: Chat.tsx  ChatSidebar.tsx  ContextMenu.tsx  DetachedChat.tsx  EditorLayout.tsx  EditorView.tsx  FileTree.tsx  FileTreeContainer.tsx  GlobalSearch.tsx  LlamaChat.tsx  ModelSelector.tsx  ProjectInitDialog.tsx  ShellSelector.tsx  Tabs.tsx  Terminal.tsx  theme-provider.tsx
src/components/ui/: dialog.tsx
src/hooks/: useChatState.ts  useFileSystem.ts  useKeybindings.ts  useTerminal.ts
src/lib/: file-icons.ts  keyboard-shortcuts.ts  languages.ts
src/lib/types/: keybindings.ts
src/services/: llm.ts  llmService.ts  modelManager.ts
src/store/: chatStore.ts  editorStore.ts
src/styles/: Chat.css  ChatSidebar.css  EditorView.css  FileTree.css  ModelSelector.css  globals.css
