[package]
name = "bitshift"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bitshift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tokenizers = "0.21.1"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
rand = "0.9.1"
llama-cpp-2 = "0.1.108"
lancedb = "0.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
duckdb = { version = "1.3.0", features = ["bundled"] }
portable-pty = "0.9.0"
tauri-plugin-os = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
